fixed issue with lists reload on mobile page

--- a/styles/pages/Lists.module.css
+++ b/styles/pages/Lists.module.css
@@ -74,4 +74,6 @@
   height: 400px;
   background: white;
   z-index: 100;
+  border-bottom: 1px solid black;
+  border-radius: 20px;
 }
